[gd_scene load_steps=6 format=3 uid="uid://y2rwm687lx7b"]

[ext_resource type="Script" path="res://Scripts/GameScene.gd" id="1_r1dd1"]
[ext_resource type="PackedScene" uid="uid://b6rjphyj8eh1o" path="res://Assets/hiveControl.tscn" id="2_sgikf"]
[ext_resource type="PackedScene" uid="uid://b8o68e2arn01o" path="res://Assets/tier.tscn" id="3_gyt3g"]
[ext_resource type="PackedScene" uid="uid://dao1t6ynvr7je" path="res://Assets/textureProgressBar.tscn" id="4_0em1y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_irsn8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r1dd1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.937255, 0.937255, 0.898039, 1)

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.25
offset_left = -128.0
offset_right = 128.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(1, 0.752941, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_irsn8")
alignment = 1
caret_blink = true
caret_blink_interval = 0.5

[node name="hiveControl" parent="." instance=ExtResource("2_sgikf")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.4
anchor_right = 0.9
anchor_bottom = 0.9

[node name="textureProgressBar" parent="." instance=ExtResource("4_0em1y")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.08
anchor_right = 0.9
anchor_bottom = 0.15

[node name="Label" parent="." instance=ExtResource("3_gyt3g")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.08
anchor_right = 0.2
anchor_bottom = 0.15

[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]

[editable path="textureProgressBar"]
[editable path="Label"]
